ENG text on TM.com

--- a/www.topmonks.com/src/html/contact/index.njk
+++ b/www.topmonks.com/src/html/contact/index.njk
@@ -144,8 +144,8 @@
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="page_sub-title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Get In Touch With Us</h2>
-          <p>Whether you're a corporate, startup or candidate we would like to hear
-            from&nbsp;you.</p>
+          <p>Whether you’re a single candidate, a startup or a whole corporation, we
+            want to hear from&nbsp;you.</p>
         </div>
 
         <div
@@ -153,8 +153,8 @@
           itemprop="employee" itemscope
           itemtype="https://schema.org/Person">
           <h3>Sales</h3>
-          <p class="box_text-about">If you're medium or large size organization and you're looking to solve
-            existing challenge, please get in touch with&nbsp;Ondrej.</p>
+          <p class="box_text-about">If you are a medium- or large-sized organization and looking to solve an existing
+            challenge, please get in touch with &nbsp;Ondrej.</p>
           <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell">
               {{ avatar(team.members['ondrej-tupy'], 112) }}
