--- a/www.topmonks.com/src/html/jobs/index.njk
+++ b/www.topmonks.com/src/html/jobs/index.njk
@@ -67,17 +67,18 @@
       <div
         class="tm-values_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="value-purple">Learning</h3>
-        <p>Learn or die. Teach or die. Only learning and teaching brains flourish.</p>
+        <p>Learn or die. Teach or die. Only those that keep their curiosity can flourish
+          and&nbsp;grow.</p>
       </div>
       <div
         class="tm-values_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="value-orange">Entrepreneurship</h3>
-        <p>Have an entrepreneurial mind. Spin-offs of our former team members are welcome.</p>
+        <p>An entrepreneurial mind is key. Feel free to reach for inspiration from amongst your coworkers.</p>
       </div>
       <div
         class="tm-values_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="value-orange">Bravery</h3>
-        <p>Be brave. Provide a sincere feedback regardless of the circumstances.</p>
+        <p>Be brave. Offer honest feedback and be open to welcoming it as&nbsp;well.</p>
       </div>
       <div
         class="tm-values_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
@@ -87,14 +88,14 @@
       <div
         class="tm-values_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="value-purple">Independence</h3>
-        <p>Success is a delivery not the time spent. Don’t wait to be asked for your
-          next task, find it yourself.</p>
+        <p>Success is delivered, not counted. Don’t wait to be asked to do something, grab the opportunity
+          yourself.</p>
       </div>
       <div
         class="tm-values_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="value-orange">Cooperation</h3>
-        <p>Our company is a living organism interconnected with our partners, customers, and community. There are no
-          borders.</p>
+        <p>Our company is a living organism that connects our partners, customers and community
+          together. There are no borders.</p>
       </div>
       <div
         class="tm-values_box tm-values_box-hidden mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
@@ -121,8 +122,8 @@
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="page_sub-title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>What are we working on?</h2>
-        <p>Variability is our specialty. Whether it’s B2B, startup or blockchain, we choose meaningful projects with a
-          modern tech stack.</p>
+        <p>Variability is our specialty. Whether it’s&nbsp;B2B, a startup or blockchain,
+          we select meaningful and interesting projects with a modern tech&nbsp;stack.</p>
       </div>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <svg width="152" height="147" viewBox="0 0 152 147" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -196,9 +197,9 @@
           </defs>
         </svg>
         <h3>Bigger companies</h3>
-        <p>We are not an agency. We prefer to deliver complete custom solutions rather than people. We transform the
-          processes & structures of our B2B clients into lovable products. Of course, remotely, if that’s your
-          preference.</p>
+        <p>We are not an agency. We deliver complex custom solutions. We transform
+          processes and structures into exciting products. Remotely, if that’s&nbsp;what
+          you&nbsp;like.</p>
       </div>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <svg width="173" height="147" viewBox="0 0 173 125" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -304,9 +305,10 @@
           </defs>
         </svg>
         <h3>Startups</h3>
-        <p>Working with our startup crew will open your mind! Welcome to the world of innovative ideas, decentralized
-          freedom and latest technologies. We support our clients in converting thoughts into real, user-friendly
-          products.</p>
+        <p>Working with our startup crew will refresh your mind! Welcome to our world of
+          innovative ideas, decentralized freedom and the latest technologies. We fully
+          support our clients and convert their thoughts and ideas into real,
+          user-friendly products.</p>
       </div>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <svg width="137" height="147" viewBox="0 0 137 145" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -506,11 +508,10 @@
           </defs>
         </svg>
         <h3>Blockchain projects</h3>
-        <p>TopMonks is a decentralized company. What does it mean? We transmute our passion for blockchain into a
-          fraction
-          of our team. Our Blockchain Studio. Working on top-notch projects, starting with UX, ending with complex
-          backend
-          development.</p>
+        <p>TopMonks is a decentralized company. What does that actually mean? We
+          transmute our blockchain passion into a fraction of our team. Enter our
+          Blockchain Studio. We work with top-notch projects, all the way from UX to
+          compex backend development.</p>
       </div>
     </div>
   </section>
@@ -522,30 +523,31 @@
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="page_sub-title page_sub-title_left mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Everyday life in TopMonks</h2>
-        <p>We don't need you messing around from 9 to 5 in the office. We want to deliver perfection! As our team is
-          mostly distributed, we've worked diligently to improve the ways we work together, and with our clients. Don't
-          count hours, deliver!</p>
+        <p>We don’t need you messing around in the office from 9&nbsp;to 5.&nbsp;We want to
+          create and deliver perfection. Our team is remote and we have worked diligently
+          to improve the ways we work together and with our clients. We don’t count
+          hours, we focus on results.</p>
       </div>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Slack</h3>
-        <p>Effective communication is the essence of cooperation - across all of our projects, and with all of our
-          customers. We don't really care where you sit, but once you are working, you should be available.</p>
+        <p>Effective communication is the essence of cooperation&nbsp;&ndash; not only across
+          our projects, but also with our customers. We don’t care where you sit, but
+          once you are working, you should make yourself available.</p>
       </div>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Github</h3>
-        <p>All our projects are running in GitHub. Many of them also use GitHub Issues for tracking the progress.
-          Together
-          with Slack it is the alpha and omega of our cooperation.</p>
+        <p>All our projects run through GitHub. Several also use GitHub Issues to track progress. Together
+          with Slack, these are the alpha and omega of our cooperation.</p>
       </div>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Swarmpit</h3>
-        <p>Most of our projects are containerized and run in Docker Swarm environment. For management of these we
-          developed our own UI called Swarmpit.</p>
+        <p>Most of our projects are based in the Docker Swarm environment. To manage these
+          successfully, we developed our own UI called Swarmpit.</p>
       </div>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Quip</h3>
-        <p>Here we share all the projects documentation, invoices, even our company library, basically our whole
-          knowledge. Ask Rarous for his amazing cook book!</p>
+        <p>We share all our documentation, invoices and even our company library in Quip. Ask Rarous for
+          his amazing cookbook!</p>
       </div>
     </div>
   </section>
@@ -612,17 +614,19 @@
         <h2>What’s next?</h2>
       </div>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h3>Come to our events</h3>
-        <p>Come to TopMonks breakfast or our monthly TopMonks Caffe, where we share our knowledge. We also hold
-          conferences on the future of work and blockchain. We are members of many other dev events where we don't only
-          participate but also often lecture. </p>
+        <h3>Meet us at one of our events!</h3>
+        <p>Our doors are open for our weekly TopMonks breakfast and our monthly TopMonks
+          Cafe. We also organize conferences on the future of work and blockchain. We are
+          members of several dev events where we participate and often lecture
+          as&nbsp;well.</p>
         <a class="action-button jumbotron__cta" href="https://www.topmonks.com/meet-us/">COME AND MEET US</a>
       </div>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h3>Get in touch with Aleš</h3>
-        <p>We are always on the lookout for talented Monks to join our team. Get in touch with us to find out more
-          about opened positions. In case you have not found the desired position, let us know. will figure something
-          out.</p>
+        <p>We are always on the lookout for talented Monks to join our team. Get in
+          touch with us to find out more about our current vacancies. If there is not one
+          that resonates with you, let us know. We just might figure something
+          else&nbsp;out.</p>
         <div class="mdc-layout-grid__inner">
           <div
             class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-iphone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
