--- a/www.topmonks.com/src/html/meet-us/index.njk
+++ b/www.topmonks.com/src/html/meet-us/index.njk
@@ -32,11 +32,12 @@
           <div
             class="tm-meetup__cell tm-events_text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
             <h3>TopMonks Caffè</h3>
-            <p>Every first Thursday of the month we hold regular meetup about everything we
-              are interested in. Balanced mix of technical and soft themes delivered by our
-              speakers and special guests.</p>
+            <p>Every first Thursday of the month, we hold a regular meetup about everything
+              that we are currently interested in and looking into. You’ll find a balanced
+              mix of technical and soft topics delivered by our speakers and special
+              guests.</p>
 
-            <div class="links"><a href="https://caffe.topmonks.cz/" hreflang="cs">CHECK OUT LATEST CAFFE</a>
+            <div class="links"><a href="https://caffe.topmonks.cz/" hreflang="cs">CHECK OUT OUR LATEST CAFFE</a>
             </div>
           </div>
         </div>
@@ -54,9 +55,9 @@
           <div
             class="tm-meetup__cell tm-events_text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
             <h3>TopMonks breakfast</h3>
-            <p>Every Thursday we have breakfast together. This is not only an opportunity to
-              meet almost all the monks, but we also welcome the interesting people
-              outer&nbsp;space.</p>
+            <p>Every Thursday, we eat breakfast together. This is not only an opportunity to
+              meet almost all our Monks, but to also welcome new interesting people into
+              our&nbsp;space.</p>
 
             <div class="links"><a href="mailto:happy@top&shy;monks.com">FEEL FREE TO COME ANYTIME</a>
             </div>
@@ -76,9 +77,10 @@
           <div
             class="tm-meetup__cell tm-events_text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
             <h3>Startup Stage</h3>
-            <p>Three times a year we invite three interesting guests from the startup world
-              to share their experiences with us. Come and ask them whatever you want. This is
-              what is #startupstage about&nbsp;&mdash; no bullshit enjoyable&nbsp;night.</p>
+            <p>Three times a year, we invite three interesting guests from the startup world
+              and have them talk about their experience with us. Come and ask them whatever
+              you like. This is what the #startupstage is all about. No bullshit, just plenty
+              of interesting info and lots of&nbsp;fun.</p>
 
             <div class="links"><a href="https://youtu.be/3bRkKJ0Xzmo">FEEL THE VIBE</a>
             </div>
@@ -98,8 +100,9 @@
           <div
             class="tm-meetup__cell tm-events_text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
             <h3>CZPodcast</h3>
-            <p>The most popular tech-podcast in Czech republic! Duo Filemon and Dagi +
-              interesting guest = fun and knowledge guaranteed!</p>
+            <p>Check out the most popular tech-podcast in the Czech Republic! The famous duo
+              Filemon &amp; Dagi is accompanied by an exciting guest. You can rest assured you
+              will laugh and learn a&nbsp;lot!</p>
 
             <div class="links"><a href="https://soundcloud.com/czpodcast-1">LISTEN TO THE PODCAST</a>
             </div>
@@ -113,9 +116,8 @@
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="page_sub-title main_page-title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Other events</h2>
-          <p>We hold conferences on the future of work and the blockchain. We are members
-            of many other dev events that we not only participate but also where we often
-            lecture.</p>
+          <p>We organize conferences on the future of work and blockchain. We are members
+            of several dev events where we participate and often lecture as&nbsp;well.</p>
         </div>
         <div
           class="other-events_logos mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-desktop">
