[www.topmonks.com] Text changes

--- a/www.topmonks.com/src/html/jobs/index.njk
+++ b/www.topmonks.com/src/html/jobs/index.njk
@@ -67,18 +67,17 @@
       <div
         class="tm-values_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="value-purple">Learning</h3>
-        <p>Learn or die. Teach or die. Only those that keep their curiosity can flourish
-          and&nbsp;grow.</p>
+        <p>Learn or die. Teach or die. Only learning and teaching brains flourish.</p>
       </div>
       <div
         class="tm-values_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="value-orange">Entrepreneurship</h3>
-        <p>An entrepreneurial mind is key. Feel free to reach for inspiration from amongst your coworkers.</p>
+        <p>Have an entrepreneurial mind. Spin-offs of our former team members are welcome.</p>
       </div>
       <div
         class="tm-values_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="value-orange">Bravery</h3>
-        <p>Be brave. Offer honest feedback and be open to welcoming it as&nbsp;well.</p>
+        <p>Be brave. Provide a sincere feedback regardless of the circumstances.</p>
       </div>
       <div
         class="tm-values_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
@@ -88,14 +87,14 @@
       <div
         class="tm-values_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="value-purple">Independence</h3>
-        <p>Success is delivered, not counted. Don’t wait to be asked to do something, grab the opportunity
-          yourself.</p>
+        <p>Success is a delivery not the time spent. Don’t wait to be asked for your
+          next task, find it yourself.</p>
       </div>
       <div
         class="tm-values_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="value-orange">Cooperation</h3>
-        <p>Our company is a living organism that connects our partners, customers and community
-          together. There are no borders.</p>
+        <p>Our company is a living organism interconnected with our partners, customers, and community. There are no
+          borders.</p>
       </div>
       <div
         class="tm-values_box tm-values_box-hidden mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
@@ -546,7 +545,7 @@
       </div>
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>Quip</h3>
-        <p>We share all our documentation, invoices and even our company library in Quip. Ask Rarous for
+        <p>We share all our documentation, invoices and even our company library in Quip. Ask rarouš for
           his amazing cookbook!</p>
       </div>
     </div>
@@ -616,7 +615,7 @@
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h3>Meet us at one of our events!</h3>
         <p>Our doors are open for our weekly TopMonks breakfast and our monthly TopMonks
-          Cafe. We also organize conferences on the future of work and blockchain. We are
+          Caffè. We also organize conferences on the Future of work and Blockchain. We are
           members of several dev events where we participate and often lecture
           as&nbsp;well.</p>
         <a class="action-button jumbotron__cta" href="https://www.topmonks.com/meet-us/">COME AND MEET US</a>
