[www.hlidacshopu.cz] ES bundling and minification

--- a/www.hlidacshopu.cz/src/html/index.njk
+++ b/www.hlidacshopu.cz/src/html/index.njk
@@ -1,19 +1,22 @@
 {% extends 'layouts/master.njk' %}
 {% from 'macros/helpers.njk' import sprite %}
 {% block title %}Hlídač shopů{% endblock %}
+
 {% block preload %}
-  <link rel="prefetch" as="script" href="https://cdn.jsdelivr.net/npm/chart.js@2.9.1/dist/Chart.bundle.min.js" crossorigin/>
-  <link rel="prefetch" as="script" href="/assets/js/extension.js"/>
-  <link rel="modulepreload" href="https://unpkg.com/lit-html@1.1.1/lit-html.js?module" crossorigin/>
+  <link rel="prefetch" as="script" href="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.bundle.min.js"
+        crossorigin/>
+  <link rel="modulepreload" href="/assets/js/index.js"/>
   <link rel="preload" as="fetch" href="https://api.hlidacshopu.cz/shop-numbers" crossorigin/>
   <link rel="preload" as="fetch" href="https://api.hlidacshopu.cz/reviews-stats" crossorigin/>
 {% endblock %}
+
 {% block styles %}
   <link rel="stylesheet" href="/assets/css/index.css"/>
   <meta name="apple-mobile-web-app-title" content="Hlídač shopů"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="default"/>
 {% endblock %}
+
 {% block main %}
   <section class="main">
     <div class="mdc-layout-grid">
@@ -178,22 +181,22 @@
           <div class="tab" id="tab-1">
             {% set chart01 = images["window01.png"]["public_id"] %}
             <img alt="" class="responsive" loading="lazy"
-              src="{{ chart01 | cloudinaryUrl(width=1008,dpr="auto") }}"
-              width="800" height="574"
+                 src="{{ chart01 | cloudinaryUrl(width=1008,dpr="auto") }}"
+                 width="800" height="574"
             />
           </div>
           <div class="tab" id="tab-2">
             {% set chart02 = images["window02.png"]["public_id"] %}
             <img alt="" class="responsive" loading="lazy"
-              src="{{ chart02 | cloudinaryUrl(width=1008,dpr="auto") }}"
-              width="800" height="574"
+                 src="{{ chart02 | cloudinaryUrl(width=1008,dpr="auto") }}"
+                 width="800" height="574"
             />
           </div>
           <div class="tab" id="tab-3">
             {% set chart03 = images["window03.png"]["public_id"] %}
             <img alt="" class="responsive" loading="lazy"
-              src="{{ chart03 | cloudinaryUrl(width=1008,dpr="auto") }}"
-              width="800" height="574"
+                 src="{{ chart03 | cloudinaryUrl(width=1008,dpr="auto") }}"
+                 width="800" height="574"
             />
           </div>
         </div>
@@ -480,539 +483,10 @@
       <div id="hlidac-shopu-modal__placeholder"></div>
     </div>
   </div>
-{% endblock %} {% block scripts %}
-  <script type="module" crossorigin="anonymous">
-    import {
-      html,
-      svg,
-      render
-    } from "https://unpkg.com/lit-html@1.1.1/lit-html.js?module";
+{% endblock %}
 
-    const form = document.getElementById("compare-form");
-    const eShops = document.getElementById("e-shopy");
-    const eShopsCount = document.getElementById("e-shops-count");
-    const productsCount = document.getElementById("products-count");
-    const installsCount = document.getElementById("installs-count");
-    const modal = document.getElementById("hlidac-shopu-modal");
-    const modalRenderRoot = document.getElementById(
-      "hlidac-shopu-modal__placeholder"
-    );
-    const installationGuide = document.getElementById("extension-install-guide");
-    const chart = () => document.getElementById("hlidac-shopu-chart");
-    const apiUrl = detailUri =>
-      `https://api.hlidacshopu.cz/shop?url=${encodeURIComponent(
-        detailUri
-      )}&metadata=1`;
-    const meta = ({ itemImage, itemName, real_sale, ...rest }) => ({
-      name: itemName,
-      imageUrl: itemImage === "null" ? null : itemImage,
-      realDiscount: real_sale === "null" ? null : parseFloat(real_sale) / 100,
-      ...rest
-    });
-    const shopStats =
-      ({
-         key,
-         count_all,
-         count_bf,
-         declared_sale,
-         real_sale,
-         percent_bf
-       }) => ({
-        key,
-        allProducts: parseInt(count_all),
-        bfProducts: (count_bf && parseInt(count_bf)) || "-",
-        avgClaimedDiscount: (declared_sale && parseFloat(declared_sale)) || "-",
-        avgRealDiscount: (real_sale && parseFloat(real_sale)) || "-"
-      });
-    const formatMoney = x =>
-      x
-        .toLocaleString("cs", {
-          minimumFractionDigits: 2,
-          maximumFractionDigits: 2
-        })
-        .replace(/,00/g, ",-");
-    const formatPercents = x => `${Math.round(100 * x).toLocaleString("cs")} %`;
-    const haveToCloseModal = t =>
-      t === modal ||
-      t.classList.contains("modal__close") ||
-      t.parentElement.classList.contains("modal__close");
-    const timeout = ms =>
-      new Promise((_, reject) =>
-        setTimeout(() => reject(new Error("timeout")), ms)
-      );
-    const shops = new Map([
-      [
-        "alza",
-        {
-          name: "Alza",
-          logo: "alza_logo",
-          url: "https://www.alza.cz/",
-          viewBox: "0 0 60 19"
-        }
-      ],
-      [
-        "czc",
-        {
-          name: "CZC.CZ",
-          logo: "czc.cz_logo",
-          url: "https://www.czc.cz/",
-          viewBox: "0 0 55 13"
-        }
-      ],
-      [
-        "datart",
-        {
-          name: "Datart",
-          logo: "datart_logo",
-          url: "https://www.datart.cz/",
-          viewBox: "0 0 98 13"
-        }
-      ],
-      [
-        "itesco",
-        {
-          name: "iTesco",
-          logo: "tesco_logo",
-          url: "https://www.itesco.cz/",
-          viewBox: "0 0 55 18"
-        }
-      ],
-      [
-        "kasa",
-        {
-          name: "kasa.cz",
-          logo: "kasa_logo",
-          url: "https://www.kasa.cz/",
-          viewBox: "0 0 70 18"
-        }
-      ],
-      [
-        "kosik",
-        {
-          name: "Košík.cz",
-          logo: "kosik_logo",
-          url: "https://www.kosik.cz/",
-          viewBox: "0 0 71 22"
-        }
-      ],
-      [
-        "lekarna",
-        {
-          name: "Lékárna.cz",
-          logo: "lekarna_logo",
-          url: "https://www.lekarna.cz/",
-          viewBox: "0 0 79 20"
-        }
-      ],
-      [
-        "mall",
-        {
-          name: "Mall.cz",
-          logo: "mall_logo",
-          url: "https://www.mall.cz/",
-          viewBox: "0 0 68 19"
-        }
-      ],
-      [
-        "mironet",
-        {
-          name: "Mironet",
-          logo: "mironet_logo",
-          url: "https://www.mironet.cz/",
-          viewBox: "0 0 59 20"
-        }
-      ],
-      [
-        "mountfield",
-        {
-          name: "Mountfield",
-          logo: "mountfield_logo",
-          url: "https://www.mountfield.cz/",
-          viewBox: "0 0 64 11"
-        }
-      ],
-      //  ["notino", { name: "Notino", logo: "notino_logo", url: "https://www.notino.cz/", viewBox: "0 0 68 13" }],
-      [
-        "rohlik",
-        {
-          name: "Rohlík.cz",
-          logo: "rohlik_logo",
-          url: "https://www.rohlik.cz/",
-          viewBox: "0 0 51 28"
-        }
-      ],
-      [
-        "tsbohemia",
-        {
-          name: "TSBohemia",
-          logo: "tsbohemia_logo",
-          url: "https://www.tsbohemia.cz/",
-          viewBox: "0 0 115 15"
-        }
-      ]
-    ]);
-
-    form.addEventListener("submit", e => {
-      e.preventDefault();
-      const detailUri = e.target["url"].value;
-      history.pushState(
-        { showModal: true, detailUri },
-        null,
-        `?url=${encodeURIComponent(detailUri)}`
-      );
-      renderResultsModal(detailUri);
-    });
-
-    modal.addEventListener("click", e => {
-      const target = e.target;
-      if (haveToCloseModal(target)) {
-        e.preventDefault();
-        history.pushState({ showModal: false }, null, "/");
-        hideResultsModal();
-        clearAndFocusInput();
-      }
-    });
-
-    addEventListener("keydown", e => {
-      if (e.key === "Escape" && history.state && history.state.showModal) {
-        history.pushState({ showModal: false }, null, "/");
-        hideResultsModal();
-        clearAndFocusInput();
-      }
-    });
-
-    addEventListener("DOMContentLoaded", e => {
-      const searchParams = new URLSearchParams(location.search);
-      if (searchParams.has("url")) {
-        const detailUri = searchParams.get("url");
-        history.replaceState({ showModal: true, detailUri }, null);
-        renderResultsModal(detailUri);
-      }
-      render(eShopList(Array.from(shops.values())), eShops);
-      const installationGuideUrl = getInstallationGuideUrl(searchParams);
-      if (installationGuideUrl) {
-        import(installationGuideUrl).then(x =>
-          render(x.installationGuide(), installationGuide)
-        );
-      }
-      eShopsCount.innerText = shops.size.toLocaleString("cs");
-      fetchDownloadStats().then(
-        ({ downloads: x }) => (installsCount.innerText = x.toLocaleString("cs"))
-      );
-      fetchShopsStats()
-        .then(xs => xs.reduce((acc, x) => acc + x.allProducts, 0))
-        .then(x => (productsCount.innerText = x.toLocaleString("cs")));
-    });
-
-    addEventListener("popstate", e => {
-      if (!history.state) {
-        hideResultsModal();
-        return;
-      }
-      const { showModal, detailUri } = history.state;
-      if (showModal) {
-        renderResultsModal(detailUri);
-      } else {
-        hideResultsModal();
-      }
-    });
-
-    function clearAndFocusInput() {
-      form["url"].value = "";
-      form["url"].focus();
-    }
-
-    function showResultsModal() {
-      modal.classList.remove("modal--hidden");
-      document.body.classList.add("no-scroll");
-    }
-
-    function hideResultsModal() {
-      modal.classList.add("modal--hidden");
-      document.body.classList.remove("no-scroll");
-    }
-
-    async function fetchDataSet(detailUri) {
-      const resp = await Promise.race([timeout(4000), fetch(apiUrl(detailUri))]);
-      if (!resp.ok) throw new Error("API error");
-      const { data, metadata } = await resp.json();
-      return {
-        meta: meta(metadata),
-        data: createDataset(data)
-      };
-    }
-
-    async function fetchShopsStats() {
-      const resp = await Promise.race([
-        timeout(4000),
-        fetch("https://api.hlidacshopu.cz/shop-numbers")
-      ]);
-      if (!resp.ok) throw new Error("API error");
-      const shopsData = await resp.json();
-      return shopsData
-        .map(shopStats)
-        .map(x => Object.assign({}, x, shops.get(x.key)));
-    }
-
-    async function fetchDownloadStats() {
-      const resp = await Promise.race([
-        timeout(4000),
-        fetch("https://api.hlidacshopu.cz/reviews-stats")
-      ]);
-      if (!resp.ok) throw new Error("API error");
-      const {
-        stats: { google, firefox }
-      } = await resp.json();
-      return {
-        downloads: parseInt(google.downloads) + parseInt(firefox.downloads)
-      };
-    }
-
-    async function renderResultsModal(detailUrl) {
-      render(loaderTemplate(), modalRenderRoot);
-      showResultsModal();
-      try {
-        const [{ plot }, chartData] = await Promise.all([
-          import(
-            "https://cdn.jsdelivr.net/npm/chart.js@2.9.1/dist/Chart.bundle.min.js"
-            ).then(() => import("/assets/js/extension.js")),
-          fetchDataSet(detailUrl)
-        ]);
-        render(
-          resultTemplate(templateData(detailUrl, chartData)),
-          modalRenderRoot
-        );
-        plot(chart(), chartData);
-      } catch (ex) {
-        console.error(ex);
-        render(notFoundTemplate(), modalRenderRoot);
-      }
-    }
-
-    function getInstallationGuideUrl(searchParams) {
-      const browsers = ["firefox", "android", "chrome", "safari"];
-      // forcing UA via get parameters has precedence
-      let browser = browsers.filter(x => searchParams.has(x)).pop();
-      if (!browser) {
-        const ua = navigator.userAgent.toLowerCase();
-        browser = browsers.filter(x => ua.indexOf(x) > 0).shift();
-      }
-      return browser && `/assets/js/${browser}.js`;
-    }
-
-    const parseTime = s => {
-      const d = new Date(s);
-      d.setHours(0, 0, 0, 0);
-      return d;
-    };
-
-    function* daysBetween(start, end) {
-      const startDay = parseTime(start);
-      const endDay = parseTime(end);
-      for (const d = startDay; d <= endDay; d.setDate(d.getDate() + 1)) {
-        yield new Date(d.getTime());
-      }
-    }
-
-    function createDataset(data) {
-      if (typeof data === "string") {
-        data = JSON.parse(data);
-      }
-      const dataMap = new Map(data.map(x => [parseTime(x.d).getTime(), x]));
-      let lastDay = data[0];
-      const days = Array.from(
-        daysBetween(parseTime(data[0].d), parseTime(data[data.length - 1].d))
-      );
-      const originalPrice = new Array(days.length);
-      const currentPrice = new Array(days.length);
-      for (let i = 0, l = days.length; i < l; i++) {
-        const day = days[i];
-        const item = dataMap.get(day.getTime()) || lastDay;
-        lastDay = item;
-        originalPrice[i] = { x: day, y: item.o === "" ? null : parseInt(item.o) };
-        currentPrice[i] = { x: day, y: item.c === "" ? null : parseInt(item.c) };
-      }
-      return {
-        originalPrice,
-        currentPrice
-      };
-    }
-
-    function naiveDiscount(currentPrice, actualPrice) {
-      const origPrice = currentPrice
-        .map(x => x.y)
-        .filter(y => y)
-        .shift();
-      return (origPrice - actualPrice) / origPrice;
-    }
-
-    function templateData(
-      detailUrl,
-      {
-        meta: { shop, name, imageUrl, realDiscount },
-        data: { currentPrice, originalPrice }
-      }
-    ) {
-      const lastDeclaredPrice = originalPrice
-        .map(x => x.y)
-        .filter(y => y)
-        .pop();
-      const { y: actualPrice, x: date } = currentPrice.filter(({ y }) => y).pop();
-      const discount = !realDiscount
-        ? naiveDiscount(currentPrice, actualPrice)
-        : realDiscount;
-      return {
-        detailUrl,
-        name,
-        shop,
-        imageUrl,
-        discount,
-        actualPrice,
-        date,
-        lastDeclaredPrice
-      };
-    }
-
-    function notFoundTemplate() {
-      return html`
-      <div
-        id="hlidac-shopu-modal__not-found"
-        class="result mdc-layout-grid__inner"
-      >
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Nenalezeno</h2>
-        </div>
-        <div
-          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 box box--purple"
-        >
-          <p>
-            Je nám líto, ale hledaný produkt nebo e-shop nemáme v naší databázi.
-          </p>
-        </div>
-      </div>
-    `;
-    }
-
-    function loaderTemplate() {
-      return html`
-      <div
-        id="hlidac-shopu-modal__loader"
-        class="result mdc-layout-grid__inner"
-      >
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Ověřuji&hellip;</h2>
-        </div>
-        <div
-          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 box box--purple"
-        >
-          <div class="loading-container">
-            <div class="loader" aria-label="Načítám data…">
-              Váš požadavek se zpracovává&hellip;
-            </div>
-          </div>
-        </div>
-      </div>
-    `;
-    }
-
-    function resultTemplate(
-      {
-        detailUrl,
-        name,
-        shop,
-        lastDeclaredPrice,
-        actualPrice,
-        discount,
-        date
-      }
-    ) {
-      const declaredOriginalPrice = x =>
-        x &&
-        html`
-        <div class="claimed-price">
-          Uváděná původní cena <del id="original-price">${formatMoney(x)}</del>
-        </div>
-      `;
-      const realDiscount = x =>
-        x !== null &&
-        !isNaN(x) &&
-        html`
-        <div>
-          <abbr
-            title="Reálná sleva se počítá jako aktuální cena po slevě ku maximální ceně, za kterou se zboží prodávalo za posledních 90 dní."
-            >Reálná sleva*</abbr
-          >
-          <b class="discount"
-            ><span id="real-discount">${formatPercents(x)}</span></b
-          >
-        </div>
-      `;
-      const crawlDate = x =>
-        x &&
-        html`
-        <time id="latest-date" datetime="${x.toISOString()}">
-          ${x.toLocaleString("cs", {
-          day: "numeric",
-          month: "long",
-          year: "numeric"
-        })}
-        </time>
-      `;
-      const shopLogo = x => x && logoTemplate(x);
-      return html`
-      <div id="hlidac-shopu-modal__found" class="result mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>
-            ${shopLogo(shops.get(shop))}<a href="${detailUrl}" id="product-name"
-              >${name || "Vámi vybraný produkt"}</a
-            >
-          </h2>
-        </div>
-        <div
-          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 box box--purple"
-        >
-          ${crawlDate(date)} ${declaredOriginalPrice(lastDeclaredPrice)}
-          <div class="actual-price">
-            Prodejní cena
-            <span id="current-price">${formatMoney(actualPrice)}</span>
-          </div>
-          ${realDiscount(discount) || ""}
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <canvas id="hlidac-shopu-chart" width="100%"></canvas>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <div style="display:flex;justify-content: flex-end">
-            <div
-              style="width:12px;height:12px;background-color:#5c62cd;border-radius:2px;margin-right:5px;margin-top:2px;"
-            ></div>
-            <span>Uváděná původní cena</span>
-            <div
-              style="width:12px;height:12px;background-color:#ff8787;border-radius:2px;margin: 2px 5px 0 8px;"
-            ></div>
-            <span>Prodejní cena</span>
-          </div>
-        </div>
-      </div>
-    `;
-    }
-
-    function logoTemplate({ logo, name, url, viewBox }) {
-      const image = svg`
-        <svg viewBox="${viewBox}">
-          <title>${name}</title>
-          <use href="/assets/img/icons.svg#${logo}"/>
-        </svg>`;
-      return html`<a href="${url}" class="sprite sprite--${logo}" title="${name}">${image}</a>`;
-    }
-
-    function eShopList(shops) {
-      return html`
-        <ul>${shops.map(x => html`
-          <li>${logoTemplate(x)}</li>`)}
-        </ul>`;
-    }
-  </script>
+{% block scripts %}
+  <script type="module" src="/assets/js/index.js"></script>
   <script type="module">
     import { Workbox } from "https://storage.googleapis.com/workbox-cdn/releases/5.0.0-rc.2/workbox-window.prod.mjs";
 
