TM Caffe - link na Loft adresu

--- a/caffe.topmonks.cz/src/html/index.njk
+++ b/caffe.topmonks.cz/src/html/index.njk
@@ -293,7 +293,7 @@
 
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
           <h3>Kde?</h3>
-          <span>{{ upcomingEvent.address | safe }}</span>
+          <a href="https://www.loftn8.com/en/">{{ upcomingEvent.address | safe }}</a>
         </div>
         <!-- Plakát, který se připravuje na akci. Zmraženo na dobu neurčitou - plakáty se nedělají včas, nemá cenu tedy pro ně tady držet místo
                 <div class="mdc-layout-grid__cell">
